tests/compiler/typecheck/unify_function_branches_3.kk.out
1
========

========
error:
  ┌─ tests/compiler/typecheck/unify_function_branches_3.kk:4:3
  │
4 │   \#false => 'yo'
  │   ^^^^^^^^^^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    |   \(          |   \(        |
    |     Boolean   |     Boolean |
    |   ) =>        |   ) =>      |
    | -   number    | +   string  |
    +---------------+-------------+

