tests/compiler/typecheck/unify_function_branches_3.kk
enum Boolean = #true #false
let result = \x => x.(
  \#true => 1
  \#false => 'yo'
)()
